--- a/values.yaml
+++ b/values.yaml
@@ -52,8 +52,8 @@ externalDB:
 
 env:
   open:
-    # Required if more than 1 worker
-    SECRET_KEY: "YFPOHLze9mTP6eGePB2h1WQTDEZyq0Bahy2hKGCQ"
+    # Required if more than 1 worker (randomly generate)
+    SECRET_KEY: "ChangeMe!123"
     # Amount of CTFd workers
     WORKERS: 5
     # If behing ingress proxy or nginx:
@@ -65,6 +65,8 @@ env:
     DATABASE_URL:
     REDIS_URL:
 
+# For uploads to the CTFd server (images and other content)
+# Not for DB
 persistence:
   uploads:
     enabled: true
@@ -98,13 +100,14 @@ probes:
     successThreshold: 1
     failureThreshold: 3
 
+# CTFd ingress:
 ingress:
-  enabled: true
+  enabled: false
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: ctf.test.psuccso.org
+    - host: ctf.your.domain.com
       path: "/"
 
   tls: []
