--- a/.github/workflows/helm.yml
+++ b/.github/workflows/helm.yml
@@ -4,8 +4,8 @@ env:
   GCR_IMAGE: ghcr.io/${{ github.repository_owner }}/ctfd
 
 on:
-  push:
-    branches: ['release']
+  release:
+    types: [published]
   workflow_dispatch:
 
 jobs:
