--- a/values.yaml
+++ b/values.yaml
@@ -66,7 +66,7 @@ env:
 persistence:
   uploads:
     enabled: true
-    #ReadWriteMany may be desired here if using a multi node cluster.
+    #ReadWriteMany may be desired here if using multiple CTFd pods
     accessMode: ReadWriteOnce 
     size: 10Gi
     labels: {}
