--- a/values.yaml
+++ b/values.yaml
@@ -9,6 +9,12 @@ image:
   tag: 3.5.0
   pullPolicy: IfNotPresent
 
+security:
+  fsGroup: 1001
+  runAsNonRoot: true
+  runAsUser: 1001
+  
+
 # Bitnami helm redis deployment
 # See bitnami redis values.yaml for more details
 redis:
