--- a/values.yaml
+++ b/values.yaml
@@ -9,6 +9,7 @@ image:
   tag: 3.5.0
   pullPolicy: IfNotPresent
 
+# Set K8s securityContext for the CTFd deployment:
 security:
   fsGroup: 1001
   runAsNonRoot: true
