--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -46,7 +46,7 @@ spec:
         {{- end }}
       containers:
         - name: "{{ .Chart.Name }}"
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ default .Chart.AppVersion .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
           {{- range $name, $value := .Values.env.open }}
