--- a/.github/workflows/helm-dependencies.yml
+++ b/.github/workflows/helm-dependencies.yml
@@ -20,6 +20,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      statuses: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
