--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -115,6 +115,7 @@ spec:
           {{- if .Values.config.enabled }}
           - name: config-volume
             mountPath: /opt/CTFd/CTFd/
+            subPath: config.ini
           {{- end }}
           livenessProbe:
             httpGet:
