--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,23 +1,21 @@
 apiVersion: v2
-version: 0.9.5
-appVersion: 3.7.6
+version: 0.9.6
+appVersion: 3.8.0
 description: A Helm chart for CTFd
 name: ctfd
 dependencies:
   - name: mariadb
-    version: 20.2.2
-    repository: https://charts.bitnami.com/bitnami
+    version: 0.3.0
+    repository: oci://registry-1.docker.io/cloudpirates
     condition: mariadb.enabled
   - name: redis
-    version: 20.7.1
-    repository: https://charts.bitnami.com/bitnami
+    version: 0.4.6
+    repository: oci://registry-1.docker.io/cloudpirates
     condition: redis.enabled
 home: https://github.com/bman46/CTFd-Helm
 icon: https://raw.githubusercontent.com/CTFd/CTFd/master/CTFd/themes/core/static/img/logo.png
 sources:
-  - https://gitlab.com/momothereal/helm-charts
-  - https://github.com/bitnami/charts/tree/master/bitnami/mariadb-galera
-  - https://github.com/bitnami/charts/tree/master/bitnami/redis
+  - https://github.com/CloudPirates-io/helm-charts
   - https://ctfd.io/
 keywords:
   - ctfd
