--- a/values.yaml
+++ b/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: ctfd/ctfd
-  tag: # defaults to chart version. Optionally, override here
+  tag: "" # Leave empty to use chart default, or specify version like "3.8.0"
   pullPolicy: IfNotPresent
 
 # Set K8s securityContext for the CTFd deployment:
@@ -19,7 +19,10 @@ security:
 # See bitnami redis values.yaml for more details
 redis:
   # Enable Redis server provided by helm:
-  enabled: True
+  enabled: true
+  # Override Redis image (optional)
+  # image:
+  #   tag: "8.2.0"
   auth:
     enabled: true
     password: "ChangeMe!123"
@@ -28,16 +31,16 @@ redis:
 
 mariadb:
   # Enable mariadb server provided by helm:
-  enabled: True
+  enabled: true
+  # Override MariaDB image tag (optional)
+  # image:
+  #   tag: "11.8.2"
   # Login credentials:
   auth:
     rootPassword: "ChangeMe!123"
     database: ctfd
     username: "ctfd"
     password: "ChangeMe!123"
-
-    replicationUser: "replicate"
-    replicationPassword: "ChangeMe!123"
 
   persistence:
     enabled: true
@@ -59,7 +62,7 @@ env:
     # Amount of CTFd workers
     WORKERS: 5
     # If behing ingress proxy or nginx:
-    REVERSE_PROXY: True 
+    REVERSE_PROXY: true 
   secret:
   existingSecret:
   # Stores Environment Variable to secret key name mappings
