--- a/.github/workflows/helm.yml
+++ b/.github/workflows/helm.yml
@@ -17,10 +17,7 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Install helm
-        uses: Azure/setup-helm@v3
-        with:
-          # Version of helm
-          version: ${{ env.HELM_VERSION_TO_INSTALL }}
+        uses: azure/setup-helm@v4
       
       - name: Read Helm Chart
         id: chart
