--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -30,7 +30,8 @@ spec:
       initContainers:
         {{- if .Values.redis.enabled }}
         - name: redis-wait
-          image: busybox:latest
+          image: "{{ .Values.initContainer.image.repository }}:{{ .Values.initContainer.image.tag }}"
+          imagePullPolicy: {{ .Values.initContainer.image.pullPolicy }}
           command: ['sh', '-c', 'echo -e "Checking for the availability of Redis Server deployment"; while ! nc -z $redisServer 6379; do sleep 1; printf "-"; done; echo -e "  >> Redis Server has started";']
           env:
             - name: redisServer
@@ -38,7 +39,8 @@ spec:
         {{- end }}
         {{- if .Values.mariadb.enabled }}
         - name: mysql-wait
-          image: busybox:latest
+          image: "{{ .Values.initContainer.image.repository }}:{{ .Values.initContainer.image.tag }}"
+          imagePullPolicy: {{ .Values.initContainer.image.pullPolicy }}
           command: ['sh', '-c', 'echo -e "Checking for the availability of MySQL Server deployment"; while ! nc -z $mysqlServer 3306; do sleep 1; printf "-"; done; echo -e "  >> MySQL DB Server has started";']
           env:
             - name: mysqlServer
